# Mycelink_client

./: .gitignore  README.md  package-lock.json  package.json
src/: AddContactModal.svelte  App.svelte  ChatInfoBanner.svelte  Chatframe.svelte  Chatselectionframe.svelte  ContactsBanner.svelte  CreateAccountModal.svelte  CreateTenantModal.svelte  Exampleapp.svelte  Newmessagearea.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd_endpoints.rs  main.rs
