[package]
name = "mycelink_client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
tokio= {version = "1.36", features = ["rt", "macros"] }

mycelink-lib-api = {path="../../mycelink_lib/mycelink-lib-api"}
once_cell = "1.19.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
